# llm-safety-evals

./: .env.example  .gitignore  Makefile  README.md  RESULTS.md  pyproject.toml
data/: capability_mc.jsonl  capability_mc_hard.jsonl  mmlu_pro.jsonl  mmlu_pro_2.jsonl  reasoning_multistep.jsonl
evals/: __init__.py
evals/oversight/: __init__.py  common.py
evals/oversight/faithfulness/: __init__.py  analyse.py  task.py
evals/oversight/perturbation/: __init__.py  analyse.py  task.py
evals/oversight/sandbagging/: __init__.py  analyse.py  run.py  task.py
sandbagging/: __init__.py  dataset.py  faithfulness.py  perturbation.py  prompts.py  task.py
scripts/: analyze.py  analyze_faithfulness.py  analyze_perturbation.py  run_suite.py
tests/: test_smoke.py
training/: README.md  __init__.py  config.py  train.py
training/cluster/: submit.slurm
training/grader_gaming/: README.md  __init__.py  calibrate.py  classifier_probe.jsonl  config.py  cot_classifier.py  entities.py  probe.py  reward.py  sweep.py  train.py
training/grader_gaming/cluster/: eval.slurm  probe.slurm  submit.slurm  validate.slurm
