[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "safety-evals"
version = "0.1.0"
description = "A collection of Inspect evals for LLM safety (sandbagging, CoT faithfulness, ...)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "inspect-ai>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
# Local, OpenAI-compatible providers (Ollama, llama-cpp-python, vLLM, ...).
# Ollama exposes an OpenAI-compatible backend, so Inspect's ollama/* provider
# needs the openai client package.
local = [
    "openai>=1.0",
]
# Open-weight fine-tuning stack (training/). Heavy + GPU-only, so it is kept
# optional to keep the eval install light. On an HPC cluster you may prefer the
# site-provided torch/CUDA module over the pip wheel — load it, then install.
train = [
    "torch>=2.3",
    "transformers>=4.51",   # Qwen3 support landed in 4.51
    "trl>=0.12",
    "peft>=0.11",
    "accelerate>=0.30",
    "datasets>=2.19",
]
# Serve a trained model for the Inspect evals (inspect --model vllm/...).
serve = [
    "vllm>=0.6",
]

[tool.setuptools.packages.find]
include = ["evals*", "training*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
